hphp/test/zend/good/tests-basic/rfc1867_missing_boundary.php
<?php
var_dump($_FILES);
var_dump($_POST);
?>