hphp/test/zend/bad/tests/basic/enable_post_data_reading_02.php
<?php
var_dump($_FILES);
var_dump($_POST);
var_dump(file_get_contents("php://input"));